[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astro-intelligence"
version = "0.1.0"
description = "Python client for the A.S.T.R.O. crypto market cognition oracle API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JARVIS", url = "https://github.com/jarvisways-cyber" }]
keywords = ["crypto", "trading", "market-data", "api-client", "oracle"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "responses>=0.23"]

[project.urls]
Homepage = "https://astro-event-horizon.vercel.app"
Repository = "https://github.com/jarvisways-cyber/astro-starbase-crypto-api"
Issues = "https://github.com/jarvisways-cyber/astro-starbase-crypto-api/issues"

[tool.setuptools.packages.find]
include = ["astro_intelligence*"]
